[package]
name = "meal_plan"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid", "numeric"] }
dotenvy = "0.15"
chrono = "0.4"
bigdecimal = "0.4"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]