[package]
name = "meal_plan"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = [
    "postgres",
    "chrono",
    "uuid",
    "numeric",
    "r2d2",
] }
dotenvy = "0.15"
bigdecimal = { version = "0.4", features = ["serde"] }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

[dependencies.uuid]
version = "1.11.0"
features = [
    "serde",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
mockall = "0.13"
